*Empty MediaWiki Message*

--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -12,7 +12,8 @@ Man leuft dat de vrijmezzelders heur failiekse rödden hebben as stainmezzelders
 == Symboliek ==
 Vrijmezzelderij kent n apaarte baauw- en lichtsymboliek dij de "lutje man" over t aalgemain nait opmaarkt of de betaikenis van wait. Veul [[Olle Egypte|Egyptische]] symboliek komt ook veur bie de vrijmezzelderij, woarvan de pyramide en t oog de bekendste binnen. Dizzent staait onder aander ook op t [[zegel van de Verainde Stoaten]]. Ook de obelisk nemt n grote ploats in in de symboliek van de vrijmezzelders. Ook de twij piloaren van de tìmpel van Solomon, Boaz en Joachim, worden broekt deur de vrijmezzelders, onder aander bie de ienwaaidensrituwelen. Voak zugt man ook n vlammende steern en schoaktiggelvlouers, dij de verainen van licht en duusternis symboliseren zollen. 
 
-t Aigense symbool bestaait oet n passer dij n houklat kruust, mit voakentieds ien t midden de letter G. Woar dit veur staait waiten veul boetenders nait. Der binnen theorien dat dit staait veur "Glorie van de Grote Geometer". Dit symbool wordt ook wel ien verbaand brocht mit t hexagram, zo as de steern van Doavid.
+t Aigense symbool bestaait oet n passer dij n houklat kruust, mit voakentieds ien t midden de letter G. Woar dit veur staait waiten veul boetenders nait. Der binnen theorien dat dit staait veur "Glorie van de Grote Geometer". Summege luu mainen dat t woord "G-unit", dat voak deur rappers broekt wordt, hier ook mit te moaken het.
+t Symbool van de passer en houklat wordt ook wel ien verbaand brocht mit t hexagram, zo as de steern van Doavid.
 
 == Opruir ==
 Deurdat de vrijmezzelders n organizoatsie vörmen dij nait ien t publieke zicht treedt, is der deur de aiwen hìn n hail ìnde spekuleerd worden over dizze groep. Onbekend moakt ja onbemind. Zo maint man dat de hogere groads vrijmezzelders veul macht hebben, veur en aachter de schaarms. Veul hoge luu, woaronder olle keunens, prinsen en tsaren wazzen lid, môr ook luu as [[George Washington]], [[Benjamin Franklin]] en aander hoge luu binnen/wazzen lid van de Vrijmezzelderij. 
