--- a/Bestaand:Jk35-1.gif.mw
+++ b/Bestaand:Jk35-1.gif.mw
@@ -1,7 +1,9 @@
 == Beschrieving ==
 Not a duplicate of [[:commons:File:John F Kennedy Official Portrait.jpg]]
 <gallery>
-File:John F Kennedy Official Portrait.jpg
+File:John F Kennedy Official Portrait.jpg|[[:File:John F Kennedy Official Portrait.jpg]] (commons)
+File:Jk35 1.gif|[[:File:Jk35 1.gif]] (commons)
+Ofbeelding:Jk35-1.gif|[[:Ofbeelding:Jk35-1.gif]] (Platt)
 </gallery>
 == Licentie ==
-{{Overigelicentie}}
+Pebliek domein: US overheid
