[[Indo-Europese talen|]] → [[Indo-Uropese taolen|]]

--- a/Volapük.mw
+++ b/Volapük.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Volap%C3%BCk_Symbol.jpg|thumb|150px|Logo van de Volapükverenige]]
+[[Ofbeelding:Volapük_Symbol.jpg|thumb|150px|Logo van de Volapükverenige]]
 't '''Volapük''' is een [[kunsttaal|kunstaal]] dee in [[1880]] emaak wönnen deur [[Johann Martin Schleyer]], een kattelieke priester in [[Baden-Baden|Baden]], [[Duutslaand]].
 
 Schleyer was van mening dat [[God]] hum in een [[droom]] verteld had um een internasionale taal te bedenken. Der wanen bie-eenkomsen over 't Volapük in [[1884]], [[1887]] en [[1889]].
@@ -11,7 +11,7 @@ Schleyer drung stark an op 't behoud van de regels dee hij vast-esteld had, hier
 
 De woordenschat van 't Volapük was ebaseerd op 't [[Engels]], mit wat [[Duuts]] en [[Frans]] derdeurhinne.
 
-"Vol" en "pük" bin of-eleid van de Engelse woorden "world" en "speech" (wereldtaal). De grammatica is ebaseerd op [[Indo-Europese talen|Indo-Europese grammatica]] en is meuilijker as de grammatica van 't Esperanto.
+"Vol" en "pük" bin of-eleid van de Engelse woorden "world" en "speech" (wereldtaal). De grammatica is ebaseerd op [[Indo-Uropese taolen|Indo-Europese grammatica]] en is meuilijker as de grammatica van 't Esperanto.
 
 == Veurbeeldtekse ==
 {{Interwiki|code=vo|naam=Volapük}}
