--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -1,8 +1,8 @@
 [[Ofbeelding:Square compasses.svg|right|thumb|250px|Logo van de vrijmezzelderij]]
-De '''Vrijmezzelderij''' is n wereldomspannende demokroatische bewegen, woarbie de leden streven om n beter mìns te worden en willen biedroagen aan n betere soamleven. Leden kommen bieainkander ien lozies veur rituwele bieainkomsten en om lezingen bie te wonen. Aan t heufd van zonnen lozie staait n achtboare meester. Aal lozies ien n gebied kommen geregeld bieainkander onder n "[[Groot Oosten]]" of "[[Groot Lozie]]", dij veurzitten wordt deur n [[Grootmeester]]. t Woord "Oosten" in "Groot Oosten" verwiest noar de plek woar de verlichting vandoan komt, de zunne komt immers op in t oosten. 
+De '''Vrijmezzelderij''' is n wereldomspannende bewegen, woarbie de leden streven om n beter mìns te worden en willen biedroagen aan n betere soamleven. Leden kommen bieainkander ien lozies veur rituwele bieainkomsten en om lezingen bie te wonen. Aan t heufd van zonnen lozie staait n achtboare meester. Aal lozies ien n gebied kommen geregeld bieainkander onder n "[[Groot Oosten]]" of "[[Groot Lozie]]", dij veurzitten wordt deur n [[Grootmeester]]. t Woord "Oosten" in "Groot Oosten" verwiest noar de plek woar de verlichting vandoan komt, de zunne komt immers op in t oosten. 
 
 == Rangorder ==
-Binnen de vrijmezzelderij heerst ondanks de staarke rangorder bruierschap. De rangorder wordt kenmaarkt deur de groaden van vrijmezzelderij: Leerling, Gezel en Meester. Wel Meester-vrijmezzelder is, het tougang tot vervolpoaden, zoals de Schotse Ritus. Dij telt 33 groaden, môr der binnen lutje dij ook waarkelk de 33. groad berieken. En hou hoger joen groad, hou meer kennes van zoaken man krigt, want elke groad kint weer aander themetiek, zo as alchemie, christendom, kabbala, rozenkruusers, ridderschop en themetiek oet t olle testement.
+Binnen de vrijmezzelderij heerst n staarke rangorder. De rangorder wordt kenmaarkt deur de groaden van vrijmezzelderij: Leerling, Gezel en Meester. Wel Meester-vrijmezzelder is, het tougang tot vervolpoaden, zoals de Schotse Ritus. Dij telt 33 groaden, môr der binnen lutje dij ook waarkelk de 33. groad berieken. En hou hoger joen groad, hou meer kennes van zoaken man krigt, want elke groad kint weer aander themetiek, zo as alchemie, christendom, kabbala, rozenkruusers, ridderschop en themetiek oet t olle testement.
 
 [[Ofbeelding:Freemasons.hall.london.arp.750pix.jpg|250px|right|thumb|Freemasons hall ien Londen]]
 [[Ofbeelding:Masonic Register 1876.jpg|250px|right|thumb|n Vrijmezzeldersdokumìnt mit veul symboliek]]
