--- a/Bestaand:Jk35-1.gif.mw
+++ b/Bestaand:Jk35-1.gif.mw
@@ -1,5 +1,5 @@
 == Beschrieving ==
-Not a duplicate of [[:commons:File:John F Kennedy Official Portrait.jpg]]
+A local copy of [[:commons:File:Jk35 1.gif]], which is not a duplicate of [[:commons:File:John F Kennedy Official Portrait.jpg]]
 <gallery>
 File:John F Kennedy Official Portrait.jpg|[[:File:John F Kennedy Official Portrait.jpg]] (commons)
 File:Jk35 1.gif|[[:File:Jk35 1.gif]] (commons)
