--- a/Achterhook.mw
+++ b/Achterhook.mw
@@ -14,9 +14,10 @@ An-enommen wöd, dat de eerste vermelding van et woord Achterhook, kump oet den 
 
 == Kultuur ==
 === Tradisies ===
-Een  Oost-Nederlandse gebruuk da'j in den Achterhook nog könt trögvinden is de naoberhulpe, et ''[[noaberschap]]''. 
-Der bunt nog völle tradisies leavend zoas et [[kroamschudden]], [[toete|ni-jjoarstoeten]] inzoamelen, [[Poasvuur]], [[Mirreweenterhoornbloazn]] en nog völle meer.
+Een  Oost-Nederlandse gebruuk da'j in den Achterhook nog könt trögvinden is de naoberhulpe, et ''[[naoberschap]]''. 
+Der bunt nog völle tradisies leavend zoas et [[kraomschudden]], [[toete|ni-jjoarstoeten]] inzoamelen, [[Paosvuur]], [[Mirreweenterhoornblaozn]] en nog völle meer.
 In den Achterhook bunt vandage de dag nog völle [[sage]]n en [[legende]]n bewoard ebleaven, dee vanof olde tieden van generoasie op generoasie wödden deurverteld.
+
 === Meziek ===
 *Den popgröppe [[Normaal]] hef völ edoan veur den tookenning van de Achterhookers. Zie wödden trots op ''boer'' te wean.
 *[[Jovink en de Voederbietels]] is ok nen bekende popgröppe uut den Achterhook. Wat minder bekend buuten den Achterhook, moar in den streke zelf woardeerd is den popgröppe [[Boh Foi Toch]].
