--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -64,7 +64,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 **''ta{{small()|a}}n'' (vòlgd deur n noam, bv. ta{{small()|a}}n Antje; Antje is mien tante)
 *[[Drèents]]:
 **''tante'' ([[ZWZ]]: vake rap uutespreuken zunder de ''-e'' bi'j namen die begunt mit een klinker: ''tant' Aaltien'')
-**Töt in de twintigste eeuw was 't ''meuie'' achter de name: ''Aaltien meuie''.
+**Töt in de twintigste eeuw was 't ''meuie'' achter de name: ''Aaltien meuie''. Ok wördden d'r ''me'' véur de name gebruukt: ''me Aale'', ''me Geze'' ([[ZWZ]])
 *[[Tweants]]:
 **''tante''
 **''meuje'' (eulderwets, nog wal as skeeldwoard gebroekt)
