--- a/Jan_Poortman.mw
+++ b/Jan_Poortman.mw
@@ -1,4 +1,4 @@
-'''Jan Poortman''' ([[De Wiek]], 1 oktober [[1897]] - [[1984]]) was een [[Drenthe|Drèentse]] skriever en onderwiezer, die te boek stund as kenner van de geskiedenis van zuudwest-Drenthe. Hi'j perbeerden ok de interesse veur [[Nedersaksisch]]e literatuur, inclusief die van [[Duutslaand]], an te fietern.
+'''Jan Poortman''' ([[De Wiek]], 1 oktober [[1897]] - [[Möppelt]], [[1984]]) was een [[Drenthe|Drèentse]] skriever en onderwiezer, die te boek stund as kenner van de geskiedenis van zuudwest-Drenthe. Hi'j perbeerden ok de interesse veur [[Nedersaksisch]]e literatuur, inclusief die van [[Duutslaand]], an te fietern.
 
 ==Opleiding en vrog wark==
 Poortman weur geboren in een boerengezin en deu de onderwiezersopleiding in Möppelt. Tussen 1919 en 1924 gaf e les in [[De Rieverst]], [[De Wiek]], [[Aduard]] en [[Möppelt]]. In dizze leste plaatse weur e in 1924 heufd van de skoele. Ok gaf e les an de Handelsaovendskoele, intied det e studeerden veur de akte [[m.o.-Nederlaans]]. Wieder warkten e as verslaggèver en fulletonskriever veur de ''Meppeler Courant'', de [[Nieuwe Rotterdamsche Courant|''NRC'']] en een riege noordelijke kraanten.
@@ -7,7 +7,7 @@ Poortman weur geboren in een boerengezin en deu de onderwiezersopleiding in Möp
 [[Ofbeelding:SieboSiebels.jpg|right|thumb|120px|''Siebo Siebels' zwaore gaank'', Poortman zien ummezetting van een Oostfriese roman]]
 Deur zien archief- en veldonderzuuk verkreeg Poortman een briede kennis van 't laandskop, de geskiedenis, spraoke en cultuur van Drenthe en angrèenzend Duutslaand. Hi'j bewarkten [[Platduuts]]e literetuur veur Nedersaksische lèzers; zo zetten hi'j [[F.G. Lottmann]] zien [[Oostfreisk Nederduutsk|Oostfries]]e roman ''Dat Hus sünner Lücht'' oaver in 't [[Zuudwest-Zuud-Drèents]] (verskenen as ''Siebo Siebels' zwoare gaank'', 1932). Vanof 1935 was Poortman mitwarker van ''Maandblad Drenthe'', daoras e gedichten, besprekings en essays oaver de skilderkuunst, volkskuunst en skrieveri'je in har staon. In 't Nedersaksisch skreef e vertellegies, vake mit een historische inslag, die in dagbladen of-edrokt wördden.
 
-End jaoren dartig was Poortman betrökken bi'j de oprichting van ''Saksenland'', een tiedskrift mit Blut und Boden-trekkies. Hi'j warkten ok veur de pro-Duutse boerenorgenisaotie ''Landbouw en Maatschappij''. In 1942 gunk e aans in 't verzet, daoras ze hum nao de [[Tweide Wereldoorlog]] veur onderskeiden hebt. In de oorlog bleef e publiceren, mar hi'j weur gien lid van de [[Nederlandsche Kultuurkamer|Kultuurkamer]].
+End jaoren dartig was Poortman betrökken bi'j de oprichting van ''Saksenland'', een tiedskrift mit Blut und Boden-trekkies. Hi'j warkten ok veur de pro-Duutse boerenorgenisaotie ''Landbouw en Maatschappij''. In 1942 gunk e aans in 't verzet. Onder de skoelname Chris N 105 verzamelden e informaotie veur de Centrale Inlichtingendienst (later 't Bureau Inlichtingen). Hier hef hi'j Nederlaandse, Kannedese, Fraanse en Belgische oorlogsonderskeidings veur ekregen. In de oorlog bleef e publiceren, mar hi'j weur gien lid van de [[Nederlandsche Kultuurkamer|Kultuurkamer]]. Na de oorlog hef e veul oaver dizze periode eskreven.
 
 ==Bibliografie==
 * ''Siebo Siebels' zwoare gaank'' (1932, vertaler)
