--- a/Biesteren.mw
+++ b/Biesteren.mw
@@ -1,6 +1,6 @@
-'''Bijsteren''' is een plattelansgebied in de gemeente [[Putten]]. 't Leit roendum de previnsiaole weg tussen Putten en [[Niekark]].
+'''Biesteren''' is een plattelansgebied in de gemeente [[Putten]]. 't Leit roendum de previnsiaole weg tussen Putten en [[Niekark]].
 
-In [[2006]] is een start emaakt mit de bouw van 800 woeningen in dit gebied, waorbie oek de naam 'Bijsteren' gebruukt is. De ontwikkeling van disse woeningen moet in 2010 klaor wezen.
+In [[2006]] is een start emaakt mit de bouw van 800 woeningen in dit gebied, waorbie oek de naam 'Biesteren' gebruukt is. De ontwikkeling van disse woeningen moet in 2010 klaor wezen.
 
 {{Putten}}
 
