--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -214,6 +214,7 @@ De [[pervincie]] Drenthe bestun oet 35 gemeeinten, mor nao de grootschaolige her
 [[tr:Drenthe]]
 [[uk:Дренте]]
 [[vi:Drenthe]]
+[[vls:Drenthe]]
 [[vo:Drenthe]]
 [[war:Drenthe]]
 [[zea:Drenthe]]
