--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -77,8 +77,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 ==Riek==
 *[[Nederlands]]: ''riek''
 
-*[[Achterhooks]]: 
-**''grepe''
+*[[Achterhooks]]: ''grepe''
+*[[Grönnegs]]: ''gavvel''
 
 ==Rijden==
 *[[Nederlands]]: ''rijden''
