Toch? volgens [Overleg_gebruker:Grönneger_1#Riek]

--- a/Nedersaksisch_H.mw
+++ b/Nedersaksisch_H.mw
@@ -197,14 +197,12 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit H begunt''' oet 't [[Neders
 **''gavel''
 **''heujvorke''
 *[[Drèents]]: ...
-*[[Grönnegs]]: ''riek''
+*[[Grönnegs]]: ''gavvel''
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: ''greep{{small()|e}}''
 *[[Urkers]]: ...
 *[[Veluws]]: '''''[[grepe]]''''', ''greep''
-
-
 
 ==Hoop (stapel van bijv. bladeren)==
 *[[Nederlands]]: 
