--- a/Grepe.mw
+++ b/Grepe.mw
@@ -10,7 +10,9 @@ Behalven de grepe en de gavel is der oek nog een aandere soorte, de '''batse'''.
 In 't [[Nederlaands|Nederlaans]] wonnen 't ''hooivork'' en ''mestvork'' eneumd. Zoas de naam al zeeg wonnen 't dan oek veural gebruuk um heui en mes op te rumen bie een [[boerderieje]] of veur en um 't huus.
 
 ==Nedersaksisch==
-*[[Achterhooks]]: ''Greep''
+*[[Achterhooks]]: 
+:*''Grepe'' (nl: riek / mestvork, 3 of meer taanden, et ding op et pleatjen wöd ne grepe eneumd)
+:*''Gavel'' (nl: hooivork, twee lange dunne taanden)
 *[[Grunnegs]]: ''riek''
 
 [[Kattegerie:West-Veluws artikel]]
