--- a/Raaive.mw
+++ b/Raaive.mw
@@ -134,6 +134,7 @@ Overg meetraaive:
 *[[sikkel (warktuug)|sikkel]]
 *[[swoag]]
 *[[rief]]
+*[[Grepe|rieg]]
 
 [[Kattegerie:Grunnegs artikel]]
 [[Kattegerie:Raaive]]
