Versie 167161 van [[Special:Contributions/145.74.170.131|145.74.170.131]] ([[User talk:145.74.170.131|overleg]]) weerummedreid. Rode links, dan ok: lege regels vort

--- a/Achterhook.mw
+++ b/Achterhook.mw
@@ -1,9 +1,9 @@
 {{Portaol|Portaol:Achterhook|Portaol Achterhook}}
-[[Ofbeelding:Achterhook-kaort.GIF|thumb|250px|Den Achterhook]]
+[[Ofbeelding:Achterhook-kaort.GIF|thumb|Den Achterhook]]
 D'n '''Achterhook''' (of ''Achterhoek'') is een gebeed in 't oosten van [[Nederlaand|Nederland]] in de previnsie [[Gelderlaand|Gelderland]] en beslöt 't gebeed tussen d'n [[Iessel]] in 't westen, d'n [[Olde Iessel]] in 't zuudwesten, de [[Duutslaand|Duutse]] grenze in 't zuudoosten en oosten en de [[Oaveriessel|Overiesselse]] streken [[Sallaand|Salland]] en [[Tweante|Twente]] in 't noorden. 't Gebeed kump ongeveer oaverèn met (is wat groter as) de veurmoalege [[Graafschap Zutfent|''Groafschap'']].
 
 == Gebeed ==
-[[Ofbeelding:Regio achterhook.gif|thumb|250px|Den Achterhook mit ziene ploatsen]]
+[[Ofbeelding:Regio achterhook.gif|thumb|Den Achterhook mit ziene ploatsen]]
 Der wöd ok wal esprokken oaver "de Graafschap", wat ne verwiezing is naor t olde [[groafschap Zutfent]], moar histories bekekken waren dee gebieden neet etzelfde. De regio Achterhook van vandage is n samenwarkingsverband tussen de gemeenten, dee in dit gebeed ligt. Dit bunt de gemeenten [[Aalten]], [[Berkelland]], [[Bronckhorst]], [[Deutekem]], [[Montferland]], [[Oost Gelre]], [[Olde Iesselstreek]] en [[Wenters]] van vandage.
 
 Met de gemeente Montferland is de regio Achterhook groter as t geografiese gebeed, umdat disse hele gemeente westelek van den Olden Iessel ligt en geografies dus bi-j de [[Liemers]] heurt. De gemeente [[Lochem]] ligt wal in t geografiese gebeed van den Achterhook, moar is neet an-eslotten bi-j et regioverband. Lochem is an-eslotten bi-j den [[Stedendreehook]], bestoande uut de gemeentes [[Apeldoorne (gemeente)|Apeldoorne]] (Apeldoorn), [[Brum]] (Brummen), [[Deaventer]], [[Epe]], [[Voorst (gemeente)|Voorst]] en [[Zutfent]].
@@ -14,10 +14,9 @@ An-enommen wöd, dat de eerste vermelding van et woord Achterhook, kump oet den 
 
 == Kultuur ==
 === Tradisies ===
-Een  Oost-Nederlandse gebruuk da'j in den Achterhook nog könt trögvinden is de naoberhulpe, et ''[[naoberschap]]''. 
-Der bunt nog völle tradisies leavend zoas et [[kraomschudden]], [[toete|ni-jjoarstoeten]] inzoamelen, [[Paosvuur]], [[Mirreweenterhoornblaozn]] en nog völle meer.
+Een  Oost-Nederlandse gebruuk da'j in den Achterhook nog könt trögvinden is de naoberhulpe, et ''[[noaberschap]]''. 
+Der bunt nog völle tradisies leavend zoas et [[kroamschudden]], [[toete|ni-jjoarstoeten]] inzoamelen, [[Poasvuur]], [[Mirreweenterhoornbloazn]] en nog völle meer.
 In den Achterhook bunt vandage de dag nog völle [[sage]]n en [[legende]]n bewoard ebleaven, dee vanof olde tieden van generoasie op generoasie wödden deurverteld.
-
 === Meziek ===
 *Den popgröppe [[Normaal]] hef völ edoan veur den tookenning van de Achterhookers. Zie wödden trots op ''boer'' te wean.
 *[[Jovink en de Voederbietels]] is ok nen bekende popgröppe uut den Achterhook. Wat minder bekend buuten den Achterhook, moar in den streke zelf woardeerd is den popgröppe [[Boh Foi Toch]].
@@ -33,13 +32,12 @@ In den Achterhook wöd vanof olde tieden nen variant van et [[Nedersaksisch|Nede
 *Op etzelfde laand vond van 2003 tot en mit 2006 et [[Arrow Rock Festival]] plaatse. Vanweage et grote slagen wodden et festival in 2007 verplaatst noar et centraler eleagen [[Biddinghuzen]] en in [[2008]] noar [[Nimwaege]].
 
 === Geskiedenis ===
-[[Ofbeelding:Bospad.jpg|250px|thumb|Bospad in boswachteri-j de Slangenburg bi-j [[Deutekem]]]]
+[[Ofbeelding:Bospad.jpg|thumb|Bospad in boswachteri-j de Slangenburg bi-j [[Deutekem]]]]
 D'n Achterhooksen geskiedenis is al gans old, net as dee van t [[Groafschap Zutfent]]. Steedn as [[Deutekem]], [[Doezebarg]], [[Bronkhorst]] en [[Zutfent]] hadden al vrog [[stadsrechten]]. Zutfent kwam in de Romeinse tied al veur en Deutekem wodden in [[838]] al eneumd. In den Achterhook bunt völle kastelen te vinden, veural van de adelleke femilies Van Heekeren en Bronkhorst. Tot late in de 19de eeuwe had dee streek dan ok ne [[Feodalisme|feodale]] soamenstelling. In den [[Tachtigjoarigen Oorlog]] kwamen doar ok reagelmoatig vi-jandelekheden veur. Veural um [[Grolle]], [[Breevoort]] moar ok um t [[kasteel]] [[Bargh]] in [['s-Heerenbarg]] is dufteg evochten.
 
 In den Achterhooksen samenlaeving wodden eeuwnlange de dienst uut-emaakt deur n klein antal grootgroandbezitters. Grote antallen dagloners mösten naor de piepen van de "hoge heern" dansen. Den Achterhooksen eigenschap is noo nog altied 't "joa, joa" zeggen, as eigenlek "nea" wöd bedoold. Dit was n stil verzet teggen et gezag, zunder dat zie metene opstandeg lekken. 
 
 Lange tied bunt der in den Achterhook bossen e-kapt veur de holtindustrie. An 't ende van de joaren '40 van de 20ste eeuwe kwam doar een ende an. In de 2de helfte van de 19de eeuwe wödden doar deur de oaverheid alderbastend investeerd deur onder andere den anleg van de spoorliene en de oprichting van de [[Gelderse Tramweagen]] (GTW). Doardeur wödden den streek meer toogankelek en kon zich noast den landbouw ok industrie vestigen. Veur dee tied was den Achterhook veurnamelek ofhankelek van t vervoer oaver den Olden Iessel, woarlangs dan ok al in de 17e eeuw de eerste industrie ontstond, te wetten de [[iezergeteri-je]]n of Hutten. Noo den [[Tweede Wereldkrieg]] is de welvoart in den Achterhook flink too-enommen.
-
 
 === [[Geleuf]] ===
 Volgens et [[Centroal Bureau veur de Statistiek]] was in 2003 nog 34,4% van de Achterhookse bevölking [[Rooms-Katholieke Karke|rooms-katteleek]], 23,9% [[Nederlaanse Hervormde Karke|Nederlaands hervormd]], 4,7% [[gereformeerd]], 3% [[islam]]itisch, 5,1 % oavereg en gaf 31,2% (de ene noa grootsten groep) an geen kerkeleke gezindte te hebben. Deur de toonemmende untkarking nömp et antal geleuvegen, en mit name et karkbezeuk of. 
@@ -51,13 +49,10 @@ Karkelek kenmarkten den Achterhook zich deurdat de streake vrögger veur n groot
 In t midden is der vanuut et zuudoosten noar et noordwesten ne liene te trekken, dee vanof [[Dinsper]] noar [[Vasseveld]], [[Zellem]] noar [[Hengel (Gelderland)|Hengel]] löp van darpen met veurnamelek ne prottestante bevolking. Et noordoosten en zuudwesten van de streake bunt van oldsheer oaver t algemeen katteliek.
 Deutekem kent ne gemengde geleufsgemeenschop, moar hier oaverheerst et antal neet-karkeleken.
 
-
-
 == Natuur ==
 In et Achterhookse [[koulissenlandschap]] is völle en verskeiden natuurschoon te vinden zoas op den [[Lochemsen barg]], in boswachteri-jen in [[Reurle]], in de [[Slangenburg]] bi-j Doeutekem en in wat veanegebeden teggen de oostgrenze mit Duutslaand. Et landschap rundumme [[Wenterswiek]] is miskien wal et meest toonangeavend veur den Achterhook. 
 
 Den Achterhook is riek an kastelen en laandhuze.
-
 
 == Ekonomie ==
 === Ontwikkeling ===
@@ -68,12 +63,8 @@ De bewonners van et gebeed leafden eursprönkeliek veural van den landbouw. Vand
 *[[iezeroer|Oerholdende]] groand maken vanof de 18de eeuwe [[Iezer|iezerindustrie]] meugelek. Bekende namen van Achterhooksen eursprong bunt DRU, Pelgrim, Becking en Bongers en [[ATAG]].
 *[[Grolsch]] [[bier]] wöd vanof [[1615]] ebrouwen in Grolle ([[Nederlaands]]: Groenlo). In et veurjoar van [[2005]] is de letste èchte Grolsche bierbrouweri-je eslotten en is et bedrief uut den Achterhook vort egaoan.
 
-
-[[Ofbeelding:Grolle_gracht.jpg|250px|thumb|230px|De [[stadsgrachte]] van [[Grolle]]]]
-
-
-
 ==Plaetse==
+[[Ofbeelding:Grolle_gracht.jpg|thumb|De [[stadsgrachte]] van [[Grolle]]]]
 Een oaverzicht van de grotere en/of toeristiese plaetse:
 
 *[[Aalten]]
@@ -118,9 +109,6 @@ Ofbeelding:Zeddam_molle.jpg|Zeddam
 {{Bron|
 <references/>
 *[http://www.staringinstituut.nl Staring Instituut], Centrum veur et streekeigene van Achterhook en Liemers}}
-
-
-
 
 {{Achterhook}}
 {{Gelderse gebieden}}
