--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -78,7 +78,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 *[[Nederlands]]: ''riek''
 
 *[[Achterhooks]]: ''grepe''
-*[[Grönnegs]]: ''riek'', ''rieg''
+*[[Grönnegs]]: ''gavvel''
 *[[Veluws]]: '''''[[grepe]]''''', ''greep''
 
 ==Rijden==
