--- a/Nedersaksisch_H.mw
+++ b/Nedersaksisch_H.mw
@@ -197,7 +197,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit H begunt''' oet 't [[Neders
 **''gavel''
 **''heujvorke''
 *[[Drèents]]: ...
-*[[Grönnegs]]: ''gavvel''
+*[[Grönnegs]]: ''riek'', ''rieg'' ([[OLD]])
 *[[Sallaans]]: ...
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: ''greep{{small()|e}}''
