--- a/Nedersaksisch_H.mw
+++ b/Nedersaksisch_H.mw
@@ -189,9 +189,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit H begunt''' oet 't [[Neders
 **''zin (in, an eten, iets, wat)''
 
 ==Hooivork==
-*[[Nederlands]]: 
-**''hooivork''
-**''mestvork''
+*[[Nederlands]]: ''hooivork'' (3 of meer tanden)
 
 *[[Achterhooks]]: 
 **''gavel''
