--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -75,7 +75,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 **''kroggen'' ([[Oldebroek]], [[Nunspeet]])
 
 ==Riek==
-*[[Nederlands]]: ''riek''
+*[[Nederlands]]: ''riek'' (2 tanden)
 
 *[[Achterhooks]]: ''grepe''
 *[[Grönnegs]]: ''gavvel''
