--- a/Nedersaksisch_R.mw
+++ b/Nedersaksisch_R.mw
@@ -75,7 +75,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit R begunt''' oet 't [[Neders
 **''kroggen'' ([[Oldebroek]], [[Nunspeet]])
 
 ==Riek==
-*[[Nederlands]]: ''riek'' (2 tanden)
+*[[Nederlands]]: ''riek'' (2 tanden; 3 of meer tanden = [[Nedersaksisch_H#Hooivork|Hooivork]])
 
 *[[Achterhooks]]: ''grepe''
 *[[Grönnegs]]: ''gavvel''
