[[Bargen]] neet linken

--- a/Bargen_(Noord-Hollaand).mw
+++ b/Bargen_(Noord-Hollaand).mw
@@ -4,7 +4,7 @@
 | bestaandsnaam woapn = Bergen NH.svg
 | lokatie = LocatieBergenNH
 | proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
-| heufdplaats = [[Bargen]]
+| heufdplaats = Bargen
 | öppervlakte = 119,85
 | öppervlakte laand = 97,15
 | öppervlakte water = 22,70
