[[Germoanse toalen]] → [[Germaanse sproaken]]; [[Oergermoans]] → [[Oergermaans]]; [[Germoanse mythologie]] → [[Germaanse mythologie]] (ok rood, moar zee [[Kattegerie:Germaanse mythologie]])

--- a/Germoans.mw
+++ b/Germoans.mw
@@ -1,11 +1,10 @@
 Met '''Germoans''' wödt ofhänkelek van et verbaand et volk of de toal of toalfamilie bedoold. Zie:
 
 * De [[Germoanen]]
-* De [[Germoanse toalen]]
-** [[Oergermoans]]
-** [[Germoanse weurden]]
-* De [[Germoanse mythologie]]
-** Et [[Germoans scheppingsverhoal]]
+* De [[Germaanse sproaken]]
+** [[Oergermaans]]
+* De [[Germaanse mythologie]]
+
 {{dv}}
 
 [[de:Germanisch]]
