[[Germoans]] → [[Germaanse sproaken|West-Germoans]] (dat is [[Germaanse sproaken]])

--- a/Oldambtsters.mw
+++ b/Oldambtsters.mw
@@ -26,12 +26,12 @@ gain
 |Toalklassifikoatie  
 |
 *[[Indo-Europees]]  
-**[[Germoans]]  
-***[[West-Germoans]]  
+**[[Germaanse sproaken|Germoans]]
+***[[Germaanse sproaken|West-Germoans]]
 ****[[Nederduuts|Leegduuts]]
-****[[Nedersaksisch|Leegsaksisch]] 
+****[[Nedersaksisch|Leegsaksisch]]
 *****[[Grunnegs]]
-******'''Oldambtsters''' 
+******'''Oldambtsters'''
 |-
 |Schrift  
 |[[Latainse alfabet]] 
