[[Germoans]] → [[Germaanse sproaken|West-Germoans]] (dat is [[Germaanse sproaken]])

--- a/Grunnegs.mw
+++ b/Grunnegs.mw
@@ -37,12 +37,12 @@
 |-
 |Toalklassifikoatsie  
 |
-* [[Indo-Uropees]]  
-** [[Germoans]]  
-*** [[West-Germoans]]  
+* [[Indo-Uropees]]
+** [[Germaanse sproaken|Germoans]]
+*** [[West-Germoans]]
 **** [[Nederduuts|Leegduuts]]
-**** [[Nedersaksisch|Leegsaksisch]] 
-***** '''Grunnegs''' 
+**** [[Nedersaksisch|Leegsaksisch]]
+***** '''Grunnegs'''
 |-
 |Schrift  
 |t [[Latainse alfabet]] 
