[[Germoans]] → [[Germaanse sproaken|Germoans]] (dat is [[Germaanse sproaken]])

--- a/Pompsters.mw
+++ b/Pompsters.mw
@@ -25,7 +25,7 @@
 |Toalklassifikoatsie
 |
 *[[Indo-Europees]]
-**[[Germoans]]
+**[[Germaanse sproaken|Germoans]]
 ***[[West-Germoans]]
 ****[[Nederduuts|Leegduuts]]
 ****[[Nedersaksisch|Leegsaksisch]]
