neet linken noar [[Germaanse sproaken]] onder [[West-Germoans]] (weal bie [[Germaanse sproaken|Germoans]]) (diff 167310/[[Grunnegs]] is OK, allineg de samenvatting neet)

--- a/Oldambtsters.mw
+++ b/Oldambtsters.mw
@@ -27,7 +27,7 @@ gain
 |
 *[[Indo-Europees]]  
 **[[Germaanse sproaken|Germoans]]
-***[[Germaanse sproaken|West-Germoans]]
+***[[West-Germoans]]
 ****[[Nederduuts|Leegduuts]]
 ****[[Nedersaksisch|Leegsaksisch]]
 *****[[Grunnegs]]
