--- a/Hoogelaandsters.mw
+++ b/Hoogelaandsters.mw
@@ -26,7 +26,7 @@ gain
 |Toalklassifikoatie  
 |
 *[[Indo-Europees]]  
-**[[Germoans]] 
+**[[Germaanse sproaken|Germoans]] 
 ***[[West-Germoans]]  
 ****[[Nederduuts|Leegduuts]]
 ****[[Nedersaksisch|Leegsaksisch]] 
