[[Germoans]] → [[Germaanse sproaken|Germoans]] (dat is [[Germaanse sproaken]])

--- a/Stadsgrunnegs.mw
+++ b/Stadsgrunnegs.mw
@@ -24,18 +24,18 @@
 |-
 |Toalklassifikoatie  
 |
-*[[Indo-Europees]]  
-**[[Germoans]] 
-***[[West-Germoans]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germoans]]
+***[[West-Germoans]]
 ****[[Nederduuts|Leegduuts]]
-****[[Nedersaksisch|Leegsaksisch]] 
+****[[Nedersaksisch|Leegsaksisch]]
 *****[[Grunnegs]]
-******'''Stadgrunnegs''' 
+******'''Stadgrunnegs'''
 |-
-|Schrift 
-|[[Latainse alfabet]] 
+|Schrift
+|[[Latainse alfabet]]
 |-
-|Toalstoates 
+|Toalstoates
 |t Stadsgrunnegs wordt zain as n dialekt van t [[Grunnegs]]
 |-
 |Toalkode ISO 639-1 
