[[Germoans]] → [[Germaanse sproaken|Germoans]] (dat is [[Germaanse sproaken]])

--- a/Westerkertiers.mw
+++ b/Westerkertiers.mw
@@ -28,13 +28,13 @@
 |-
 |Toalklassifikoatsie  
 |
-*[[Indo-Europees]]  
-**[[Germoans]] 
-***[[West-Germoans]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germoans]]
+***[[West-Germoans]]
 ****[[Nederduuts|Leegduuts]]
-****[[Nedersaksisch|Leegsaksisch]] 
+****[[Nedersaksisch|Leegsaksisch]]
 *****[[Grunnegs]]
-******'''Westerkertiers''' 
+******'''Westerkertiers'''
 |-
 |Schrift 
 |[[Latainse alfabet|Latiense alfabet]] 
