[[Germoans]] → [[Germaanse sproaken|Germoans]] (dat is [[Germaanse sproaken]]); [[Westgermoans]] → [[West-Germoans]]

--- a/Westlaauwers_Frais.mw
+++ b/Westlaauwers_Frais.mw
@@ -35,9 +35,9 @@
 |-
 |Toalklassifikoatsie  
 |
-*[[Indo Europees]]  
-**[[Germoans]]  
-***[[Westgermoans]]  
+*[[Indo Europees]]
+**[[Germaanse sproaken|Germoans]]
+***[[West-Germoans]]
 ****[[Ingvaeoons]]
 ****[[Freesk|Frais]] 
 *****'''Westlaauwers Frais''' 
