[[Germoans]] → [[Germaanse sproaken|Germoans]] (dat is [[Germaanse sproaken]])

--- a/Riessens.mw
+++ b/Riessens.mw
@@ -8,7 +8,7 @@
 |Taalklassifikaasie
 |
 *[[Indo-Europees]]  
-**[[Germoans]]  
+**[[Germaanse sproaken|Germoans]]  
 ***[[West-Germoans]]  
 ****[[Nederduuts]]
 ****[[Neersassies]] 
