[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Stellingwarfs.mw
+++ b/Stellingwarfs.mw
@@ -23,7 +23,7 @@
 |Taelklassifikaosie  
 |
 *[[Indo-Europees]] 
-**[[Germaans]] 
+**[[Germaanse sproaken|Germaans]] 
 ***[[West-Germaans]] 
 ****[[Nederduuts]] 
 ****[[Nedersaksisch]] 
