[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Afrikaans.mw
+++ b/Afrikaans.mw
@@ -4,7 +4,7 @@
 == Onderverdeling ==
 {{interwiki|code=af}}
 * [[Indo-Europees]]
-** [[Germaans]]
+** [[Germaanse sproaken|Germaans]]
 *** [[West-Germaans]]
 **** [[Nederduuts]]
 ***** [[Nederfrankisch]]
