--- a/Drèents.mw
+++ b/Drèents.mw
@@ -25,7 +25,7 @@
 |Taolclassificatie
 |
 *[[Indo-Europees]]  
-**[[Germaans]]  
+**[[Germaanse sproaken|Germaans]]  
 ***[[West-Germaans]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
