[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Veluws.mw
+++ b/Veluws.mw
@@ -26,7 +26,7 @@
 |Taalclassificasie
 |
 *[[Indo-Europees]]  
-**[[Germaans]]  
+**[[Germaanse sproaken|Germaans]]  
 ***[[West-Germaans]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
