--- a/Duuts.mw
+++ b/Duuts.mw
@@ -1,4 +1,4 @@
-'''Duuts''' (in et Hoogduuts: ''Deutsch'') is een [[Germaans]]e [[Indo-Europese]] [[tael]] die praot wodt in [[Duutslaand]], [[Oostnriek|Oostenriek]], [[Zwitserlaand]], [[Liechtenstein]], [[Luxemburg (laand)|Luxemburg]], [[België]], [[Italiën|Italië]] en inkelde aandere kontreinen. Et Duuts het omdebi'j 110 miljoen memmetaelsprekers en is ok iene van de belangriekste taelen van Europa tegere mit et [[Fraans]] en et [[Ingels]]. Et Duuts bruukt et [[Latien]]se alfabet en wodt opdield in et [[Hoogduuts]] en [[Nederduuts]] en inkelde aandere dialekten (veurnaemelik in et oosten en et zuden).
+'''Duuts''' (in et Hoogduuts: ''Deutsch'') is een [[Germaanse sproaken|Germaanse]] [[Indo-Uropese taolen|Indo-Europese tael]] die praot wodt in [[Duutslaand]], [[Oostnriek|Oostenriek]], [[Zwitserlaand]], [[Liechtenstein]], [[Luxemburg (laand)|Luxemburg]], [[België]], [[Italiën|Italië]] en inkelde aandere kontreinen. Et Duuts het omdebi'j 110 miljoen memmetaelsprekers en is ok iene van de belangriekste taelen van Europa tegere mit et [[Fraans]] en et [[Ingels]]. Et Duuts bruukt et [[Latien]]se alfabet en wodt opdield in et [[Hoogduuts]] en [[Nederduuts]] en inkelde aandere dialekten (veurnaemelik in et oosten en et zuden).
 
 {{interwiki|code=de}}
 {{Germoans}}
