[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Urkers.mw
+++ b/Urkers.mw
@@ -25,7 +25,7 @@
 |Taolclassificaosie
 |
 *[[Indo-Europees]]  
-**[[Germaans]]  
+**[[Germaanse sproaken|Germaans]]  
 ***[[West-Germaans]]  
 ****[[Nederduuts|Nederdeus]]
 ****[[Nedersaksisch]] 
