[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Stadsfries.mw
+++ b/Stadsfries.mw
@@ -18,9 +18,9 @@
 |-
 |Taelklassifikaosie  
 |
-*[[Indo-Europees]]  
-**[[Germaans]]  
-***[[West-Germaans]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaans]]
+***[[West-Germaans]]
 ****[[Nederfrankisch]]
 *****[[Nederlaands|Nederlaans]]
 ******[[Hollaans (dialekt)|Hollaans]]
