--- a/Runes_(skrift).mw
+++ b/Runes_(skrift).mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Wikipedia in rune.png|thumb|right|300px|''Wikipedia'', eskreewn in Rune]]
-'''Runes''', of '''futhark''' is t ooldst bekeande [[skrift]] wat in [[Germaans|Germaanse]] laandn gebroekt wör, of wördt. t Het ''Futhark'', umdet det de eerste letters van t skrift beent, namelik ''F'', ''U'', ''TH'', ''A'', ''R'' en ''K''. t Besteet oet letters dee net as in t [[Latien|Latiense]] alfabet vuur eenn klaank stoat. De letters beent meestieds saamn esteeld van rechte en heukige lienn, dee at makkelik in [[hoolt]] of [[steen]] te krasn beent. Op [[metaal]] wordt mangs ook roonde vörme gebroekt.
+'''Runes''', of '''futhark''' is t ooldst bekeande [[skrift]] wat in [[Germoanen|Germaanse]] laandn gebroekt wör, of wördt. t Het ''Futhark'', umdet det de eerste letters van t skrift beent, namelik ''F'', ''U'', ''TH'', ''A'', ''R'' en ''K''. t Besteet oet letters dee net as in t [[Latien|Latiense]] alfabet vuur eenn klaank stoat. De letters beent meestieds saamn esteeld van rechte en heukige lienn, dee at makkelik in [[hoolt]] of [[steen]] te krasn beent. Op [[metaal]] wordt mangs ook roonde vörme gebroekt.
 
 n Euldstn bekeande Runeskrif is van ongevear 150 n. C., mear de meeste Runeskriftn been van tusken [[200]] en [[1200]] n. Chr., en wördn in [[Skandinavië]] (vuural in [[Zweden|Zweedn]] nog n poar honderd joar lenger gebroekt. Doarnoa wör t in gebroek verdrungn duur t Latiense alfabet. t Wör vuural gebroekt vuur inkoarvings op woapns, op grafsteenn en vuur t alledaagns kommuniseern. In zowat alle gebeedn woer at Germaann hebt ewest (en [[Viking|Vikings]] ook), beent Runeskriftn terugge te veendn.
 
