[[Germaans]] → [[Germaanse sproaken|Germaans]] (dat is [[Germaanse sproaken]])

--- a/Gait-Jan.mw
+++ b/Gait-Jan.mw
@@ -1,4 +1,4 @@
-'''Gait-Jan''' is een [[Nedersaksisch]]e [[veurnaam|jongensnaam]] dee besteet uut twee woorden: ''[[Gait]]'', uut 't [[Germaans]], dat ''dapperheid'' of ''man mit een speer'' betekent en ''[[Jan]]'', van 't [[Hebreeuws]]e ''Jochanan'' (vanuut de [[Biebel]]), dat ''God hef medeliejen'' betekent.
+'''Gait-Jan''' is een [[Nedersaksisch]]e [[veurnaam|jongensnaam]] dee besteet uut twee woorden: ''[[Gait]]'', uut 't [[Germaanse sproaken|Germaans]], dat ''dapperheid'' of ''man mit een speer'' betekent en ''[[Jan]]'', van 't [[Hebreeuws]]e ''Jochanan'' (vanuut de [[Biebel]]), dat ''God hef medeliejen'' betekent.
 
 De [[Nederlaands|Nederlaanse]] variant is ''Gert-Jan'' en de [[Westlaauwers Frais|Friese]] variant is ''Geart-Jan''.
 
