--- a/Frieja.mw
+++ b/Frieja.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding: Freya and Heimdall by Blommer.jpg|thumb|right|300px|Heimdallr brech n oarmbaand ''Brísingamen'' terugge noar Frieja. Skilderd duur n Zweed [[Nils Blommér]]]]
 
-'''Frieja''' (Ook wal eskreewn as '''Freja''', '''Freya''' of '''freyja''') is ne godin in t [[Germaans|Germaanse]] [[heedndom]]. Duurdet de verslage van dit geleuf in t verleedn duur [[Kristelik|kristelike]] geskiedenisoonderzeukers bint an-epast, is neet helemoal dudelik wodöanig of Frieja anbeedn wör, of wat vuur gebroekn dr warn ter eare van um.
+'''Frieja''' (Ook wal eskreewn as '''Freja''', '''Freya''' of '''freyja''') is ne godin in t [[Germaanse mythologie|Germaanse]] [[heedndom]]. Duurdet de verslage van dit geleuf in t verleedn duur [[Kristelik|kristelike]] geskiedenisoonderzeukers bint an-epast, is neet helemoal dudelik wodöanig of Frieja anbeedn wör, of wat vuur gebroekn dr warn ter eare van um.
 
 ==Rolle van Frieja==
 In de [[Edda]]'s wördt Freia of-ebeeld as ne godin van [[leefde]], [[skoonheaid]] en [[vruchtberheaid]]. Frieja wörd beskreewn as n meuistn oonder de godinn, met bloonde höare en blaauwe oogne. De leu bidn tot um vuur geluk in de leefde, hulpe bie bevallingn, en vruchtbere tiedn.
@@ -8,7 +8,7 @@ In de [[Edda]]'s wördt Freia of-ebeeld as ne godin van [[leefde]], [[skoonheaid
 Van de aandere kaante wör Frieja in verbaand ebracht met [[oorlog]], [[stried]], [[dood]], [[teuvelkeunst|teuwelkeunst]], [[vuurspelling]] en [[riekdom]]. Van um wör ezegd det hee de helfte van de doodn kreeg dee at umme ekömn warn in gevechtn dee at dan noar zinne halle [[Fólkvangr]] (''volkvanger'') gungn, terwiel as de aandere helfte noar [[Wodan|Odin]] zin [[Walhalla]] gung. Ook wördt van Freia ezegd det de [[Seid]]-magie van um köm.
 
 ==Stee in t Germaanse geleuf==
-[[Frigg]] en Frieja warn de twee belangriekste godinn van de [[Asynjur]], de belangriekste godinn t [[Germaans]]e geleuf, mear van dee beaide wördt an enömn det Frieja mear andacht kreeg. In de ''[[Droplaugarsona Saga]]'' steet det bie Ölvusvatn in [[Ieslaand]] twee standbeeldn van disse twee godinn teegnoawer dee van [[Thor]] en [[Freyr|Friejer]] steundn. Ze warn riek versierd met goold en zilver. 
+[[Frigg]] en Frieja warn de twee belangriekste godinn van de [[Asynjur]], de belangriekste goden in t [[Germaanse mythologie|Germaanse]] geleuf, mear van dee beaide wördt an enömn det Frieja mear andacht kreeg. In de ''[[Droplaugarsona Saga]]'' steet det bie Ölvusvatn in [[Ieslaand]] twee standbeeldn van disse twee godinn teegnoawer dee van [[Thor]] en [[Freyr|Friejer]] steundn. Ze warn riek versierd met goold en zilver. 
 
 In de ''[[Heimskringla]]'' (vrie ummezat: n ''Eardskreenk'') wördt Frieja beskreewn as n [[mythologie|mythologise]] prinsesse van [[Zweden|Zweedn]]. Öaren vaa [[Njord]]  was n tweedn keuning van Zweedn en öaren breur Friejer is n doardn. Frieja en Friejer öare moo was n zuster van Njord. Dit köm wal vakerder vuur bie de [[Wanen|Waann]] (ook wal ''Vanir'' eneumd), wat ook in öare wetn steun.
 
