[[Kattegerie:Geleuf]] → [[Kattegerie:Germaanse mythologie]]

--- a/Frieja.mw
+++ b/Frieja.mw
@@ -25,8 +25,8 @@ In t Neersassies en t Hollaands keump n naamn van Frieja terugge in n 5en dag va
 
 * [[Grönnegs]]: ''Frije'' of ''Fraie''
 
-[[Kattegerie: Tweants artikel]]
-[[Kattegerie: Geleuf]]
+[[Kattegerie:Tweants artikel]]
+[[Kattegerie:Germaanse mythologie]]
 
 [[als:Freyja]]
 [[ar:فريا]]
