--- a/Schiermonnikoogs.mw
+++ b/Schiermonnikoogs.mw
@@ -19,7 +19,7 @@
 |Taelklassifikaosie  
 |
 *[[Indo-Europees]]  
-**[[Germaans]]  
+**[[Germaanse sproaken|Germaans]]  
 ***[[West-Germaans]]  
 ****[[Noordwest-Germaans]]
 *****[[Freeske taaln|Fries]]
