--- a/Sticht_Utrecht.mw
+++ b/Sticht_Utrecht.mw
@@ -197,6 +197,7 @@ In disse lieste staot de bisschoppen die ok as graof of wereldlijk heer regeerd 
 |Elect; hij dreug as leste prins-bisschop de wereldlijke macht in Sticht en Oaversticht oaver an Karel V.
 |}
 
+{{commonscat|Bishopric of Utrecht}}
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Categorie:Geschiednis van Grunnen]]
