bot aanders: [[sk:Flevoland]]

--- a/Flevolaand.mw
+++ b/Flevolaand.mw
@@ -89,7 +89,7 @@ Op [[Urk]] wort van oorsprong een [[Nedersaksisch]] dialect espruken, et [[Urker
 [[ro:Flevoland]]
 [[ru:Флеволанд]]
 [[simple:Flevoland]]
-[[sk:Flavónsko]]
+[[sk:Flevoland]]
 [[sv:Flevoland]]
 [[sw:Flevoland]]
 [[tg:Вилояти Флеволанд]]
