--- a/Iezergeteri-je.mw
+++ b/Iezergeteri-je.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Ulft006-2kopie.jpg|133px|thumb|Beeld van de huttenkearl in Ulft]]
 Een '''iezergeteri-je''', ok wal ''hut'' enuumd, is een fabriek woar iezer esmolten wordt en in mallen egotten wordt. Disse mallen bunt vake in dreug zand emaakt. De eenmoal af-ekuulde produkten bunt vanaf dat moment dus van geetiezer.
 
-Iezergeteri-jen kwaamn in [[Nederland]] as eerste veur langs de [[Olde Iessel]], umdat doar de umstandigheden heel gunstig waren. Der zat völle [[oer]] in de grond, der was holt genoeg um de oavens met te stokken en der was water genog um de produkten te vervoeren. Al in de [[17e eeuw]], ruum veur de [[industriële revolutie]], was ut iezergeten ne echten industrie in disse contreien.
+Iezergeteri-jen kwaamn in [[Nederland]] as eerste veur langs de [[Olde Iessel]], umdat doar de umstandigheden heel gunstig waren. Der zat völle [[Iezeroer|oer]] in de grond, der was holt genoeg um de oavens met te stokken en der was water genog um de produkten te vervoeren. Al in de [[17e eeuw]], ruum veur de [[industriële revolutie]], was ut iezergeten ne echten industrie in disse contreien.
 
 De letste joaren bunt de meeste iezergeteri-jen uut de contreien um de [[Olde Iessel]] verdwenen. Een enkele grote is oaver-ebleven, zoas de ''Lovink'' in [[Terborg]]. De warknemmers in de iezergeteri-jen, die dit heite en zwoare wark mosten doen, wodden ok wal ''huttenkearls'' enuumd.
 [[Ofbeelding:gieterijdeventer_TN.JPG|thumb|right|250px|'t enige oaver-ebleaven gebouw -ok monument- van de oeriezergeteri-je van Nering Bögel in de Raambuurte. Rechts is nog net 'iezermölle' te leazen. Noadat Nering Bögel in 1931 vort ging, wöd et gebouw as opslagploatse veur groan, zoaden en kunstmest gebruukt.]]
