*Empty MediaWiki Message*

--- a/Tubaantn.mw
+++ b/Tubaantn.mw
@@ -7,7 +7,7 @@ Eankele hoonderdn joarn later kömn de Tubanti wier in anraking met t Romeinse l
 
 Eankele joarhonderdn later gungn de Tubanti duur inmenging op in t grote stamverbaand van de [[Saksen (vôlk)|Saksn]].
 
-Dr beent archeologise bewiezn det de Tubanti al lange van [[metaal]]- en [[Stoal]]maakn wusn. De groondstof [[oer]] keump völle vuur in Tweante. De leaftied van de stoalmakeriejn geet terugge tot [[280]]-[[350]].
+Dr beent archeologise bewiezn det de Tubanti al lange van [[metaal]]- en [[Stoal]]maakn wusn. De groondstof [[Iezeroer|oer]] keump völle vuur in Tweante. De leaftied van de stoalmakeriejn geet terugge tot [[280]]-[[350]].
 
 Rechtevoort kö'j ''Tubantia'' nog wierveendn in n naamn van t dagblad [[De Twentsche Courant Tubantia]], de voetbalvereniges H.V.V. Tubantia ([[Hengel (Oaveriessel)|Hengel]]) en Tubantia Borgerhout ([[Antwaarp|Antwoarpn]]), Voetbal en Athletiek Club De Tubanters oet [[Eanske]],  de Twentse Roeivereniging Tubantia (Hengel), Padveenderieje De Tubanten ([[Almelo]]) en de skeetverenige Tubantia  ([[Riesn]]); de Tubantiasingel en Tubantiastroate in Eanske en in n naamn [[Tweante]].
 
