*Empty MediaWiki Message*

--- a/Gaffeltaand.mw
+++ b/Gaffeltaand.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Cadela de frade 050527 066.jpg|thumb|right|200px|Gewoonn gaffeltaand (''Forficula Auricularia'')]]
 n '''Gaffeltaand''' ([[Latien]]: ''Dermaptera'') is nen [[insekt]]nsoort, den at vaalt oonder de [[Pterygota]]. n Bekeandstn is de gewone gaffeltaand (''Forficula auricularia'').
 
-De gaffeltaand is te herkenn an den krommen klem an de achterkaante (de [[grepe|gaffel]]), de [[cerci]]. Disn is bie t mennken wat grötter as bie t vröwken. Gaffeltaandn wordt vake "vieze deers" eneumd, mear beent feailik onmeundig nuttig.
+De gaffeltaand is te herkenn an den krommen klem an de achterkaante (n [[grepe|gaffel]]), de [[cerci]]. Disn is bie t mennken wat grötter as bie t vröwken. Gaffeltaandn wordt vake "vieze deers" eneumd, mear beent feailik onmeundig nuttig.
 
 == Naamn ==
 In völle [[Europa (continent)|Europese]] sproak wörd t deerkn wal ''oorwörm'' eneumd: [[Engels]]: ''earwig'', [[Duuts]]: ''Ohrwurm'' (ook: ''Ohrkneifer'', "oorknieper"), [[Freesk]]: ''earkrûper'', [[Fraans]]: ''perce-oreille'', [[Deens]]: ''ørentviste'', [[Slowaaks]]: ''ucholak'' (ucho = oor, lak = skrik), en [[Hongaars]]: ''fülbemászó'' ("kroeper-in-t-oor"). Dit hef wellich te maakn met n oold volkspröatjen det n gaffeltaand bie de leu in t oor zol kroepn en doar eier zol legn. Ne aandere verkloarige kan wean det ze vrooger gebroekt wördn as medisien teegn oorklachtn. Zelfs n offisjeeln [[latiens]]n naamn dut oawer "oor" (''auricula''). Wieters liekt de oetgevoolne vlerkn van n gaffeltaand op n skelp van t oor. Mangs wördt hee, umdet hee den grootn gaffel an de achterkaante hef, ook wal ''knieptange'' neumd.
