[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Westerwoolds.mw
+++ b/Westerwoolds.mw
@@ -24,15 +24,15 @@
 *Onstwedsters
 *Zèlngs
 |-
-|Taolklassifikaotie  
+|Taolklassifikaotie
 |
-*[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts|Leegduuts]]
-****[[Nedersaksisch|Leegsaksisch]] 
+****[[Nedersaksisch|Leegsaksisch]]
 *****[[Grunnegs|Grönnegs]]
-******'''Westerwoolds''' 
+******'''Westerwoolds'''
 |-
 |Schrift 
 |[[Latainse alfabet]] 
