[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Noordenvelds.mw
+++ b/Noordenvelds.mw
@@ -24,14 +24,14 @@
 |-
 |Taolclassificaotie  
 |
-*[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts]]
-****[[Nedersaksisch]] 
+****[[Nedersaksisch]]
 *****[[Grunnegs]]
 *****[[Drèents]]
-******'''Noordenvelds''' 
+******'''Noordenvelds'''
 |-
 |Schrift 
 |[[Latainse alfabet|Lateeinse alfabet]] 
