[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Zuudwest-Zuud-Drèents.mw
+++ b/Zuudwest-Zuud-Drèents.mw
@@ -19,16 +19,16 @@
 |Antal sprekers 
 |?
 |-
-|Dialecten 
+|Dialecten
 |Ofzunderlijke plaatsen
 |-
-|Taalclassificaotie  
+|Taalclassificaotie
 |
-*[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts]]
-****[[Nedersaksisch]] 
+****[[Nedersaksisch]]
 *****[[Drèents]]
 ******[[Zuud-Drèents]]
 *******'''Zuudwest-Zuud-Drèents'''
