[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Zuudwest-Noord-Drèents.mw
+++ b/Zuudwest-Noord-Drèents.mw
@@ -24,11 +24,11 @@
 |-
 |Taelclassificaotie
 |
-*[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts]]
-****[[Nedersaksisch]] 
+****[[Nedersaksisch]]
 *****[[Drèents]]
 ******[[Zuud-Drèents]]
 *******[[Zuudwest-Noord-Drèents]]
