--- a/Midden-Drèents.mw
+++ b/Midden-Drèents.mw
@@ -22,13 +22,13 @@
 |Dialecten 
 |Ofzunderlijke plaatsen
 |-
-|Taolclassificaotie  
+|Taolclassificaotie
 |
-*[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts]]
-****[[Nedersaksisch]] 
+****[[Nedersaksisch]]
 *****[[Drèents]]
 ******[[Midden-Drèents]]
 |-
