[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Zaand-Drèents.mw
+++ b/Zaand-Drèents.mw
@@ -25,8 +25,8 @@
 |Taalclassificaotie  
 |
 *[[Indo-Europees]]  
-**[[Germaons]] 
-***[[West-Germaons]]  
+**[[Germaanse sproaken|Germaons]] 
+***[[West-Germoanse toalen|West-Germaons]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
 *****[[Drèents]]
