--- a/Erica_(Drenthe).mw
+++ b/Erica_(Drenthe).mw
@@ -8,7 +8,7 @@ De eerste luu die as op Erica woonden bint kenaolgraovers ewest die heur in 1863
 
 De mieste kenaolgraovers waren niet drok op dit plekkien en gungen terogge naor [[Slagharen]] daoras ze wegkwamen, mar twei femilies, die van Geert Tien en Anton Lipholt, bint ebleben. Dizze femilies kwamen uut [[Duutslaand]] en trökken laangs Slagharen op [[Zuudoost-Drenthe]] an um kenaolen te graoven. Um dizze reden bint veule luu op Erica nog [[katholicisme|katteliek]] (44%).
 
-Ien 't zölfde jaor kregen nog drei femilies uut Slagharen heur stee op Erica: de femilies van Geert Veltrop, Frans Fahrweg en Hendrikus Kotterink. Dit waren boekweitboeren die verhuzen mossen umdet d'r ien de contreien van Slagwaren gien [[vene (grondsoorte)|veen]] meer oaver was um boekweit op te verbouwen. Dizze gezinnen hadden aordig wat kiender, waordeur d'r al een hiele nederzetting ontstund.
+Ien 't zölfde jaor kregen nog drei femilies uut Slagharen heur stee op Erica: de femilies van Geert Veltrop, Frans Fahrweg en Hendrikus Kotterink. Dit waren boekweitboeren die verhuzen mossen umdet d'r ien de contreien van Slagharen gien [[vene (grondsoorte)|veen]] meer oaver was um boekweit op te verbouwen. Dizze gezinnen hadden aordig wat kiender, waordeur d'r al een hiele nederzetting ontstund.
 
 Dizze mèensen hebt hun gehuchien de name geben van de plaotse daoras ze weg kwamen, dus Ni'j Slagharen. Mar de borgemeister van Em, Mr. Lucas Oldenhuis Tonckens, hef 't dörp definitief Erica enuumd, de [[Latien]]se name veur döpheide.
 
