[[Germaons]] → [[Germaanse sproaken|Germaons]], [[West-Germaons]] → [[West-Germoanse toalen|West-Germaons]] (dat bint [[Germaanse sproaken]] en [[West-Germoanse toalen]])

--- a/Zuudoost-Drèents.mw
+++ b/Zuudoost-Drèents.mw
@@ -24,9 +24,9 @@
 |-
 |Taalclassificaotie
 |
-*[[Indo-Europees]] 
-**[[Germaons]]
-***[[West-Germaons]]
+*[[Indo-Europees]]
+**[[Germaanse sproaken|Germaons]]
+***[[West-Germoanse toalen|West-Germaons]]
 ****[[Nederduuts]]
 ****[[Nedersaksisch]]
 *****[[Drèents]]
