[[Germaons]] → [[Oergermaans|Germaons]] (dat is [[Oergermaans]]); http://www.dalfsen.nl/web/show/id=47391 (404) → http://www.dalfsen.nl/OverDalfsen/Oudleusen.htm

--- a/Es_(geografie).mw
+++ b/Es_(geografie).mw
@@ -12,9 +12,9 @@ In de Achterhoek en Twente haj ok kleinere essen, die as bi'j een [[boerderieje|
 De baodemlaoge van een es nuumt ze ''esdek''. De akkers heet wal ''bolle akkers''.
 
 ==Plaatsnamen==
-'t Woord ''es'' kump van een old [[Germaons]] woord det 'akker' of 'zeilaand' beduudt.
+'t Woord ''es'' kump van een old [[Oergermaans|Germaons]] woord det 'akker' of 'zeilaand' beduudt.
 *In [[Em (plaots)|Em]] is de es krek buten 't stadscentrum nog een hiele zet bewaord ebleben, mar mus uuteindelijk wieken veur een parkeerplaatse. De name van de wiek [[Bargeres]] wiest nog naor 't es-vleden van de stad. In de [[buurtschop|buurtskop]] [[Zuudbarge]] is nog een es bewaord ebleben.
-*Ze geleuft det ''lusen'' in de namen [[Ni'jlusen]] en [[Oldlusen]] ''lo-essen'' (= holt-essen) beduudt. <ref>http://www.dalfsen.nl/web/show/id=47391</ref>
+*Ze geleuft det ''lusen'' in de namen [[Ni'jlusen]] en [[Oldlusen]] ''lo-essen'' (= holt-essen) beduudt. <ref>http://www.dalfsen.nl/OverDalfsen/Oudleusen.htm</ref>
 *In [[Zwolle (Oaveriessel)|Zwolle]] was de wiek [[Oosterenk]] vrogger een enk.
 
 't Bestaandsdiel -ink in veule plaats- en achternamen in Twente en daorbuten hef gien relaosie mit 't woord ''enk''.
