[[Germaonen]] → [[Germoanen|Germaonen]] (dat is [[Germoanen]])

--- a/Waols.mw
+++ b/Waols.mw
@@ -3,7 +3,7 @@
 't '''Waols''' is een [[Romaons (taal)|Romaonse]] taal die ze praot in [[België]], [[Fraankriek]] en 't noordoosten van de [[Verienigde Staoten van Amerika|Amerikaanse]] staot [[Wisconsin]].<ref name="UniWisconsin" /> De [[Fraanse Gemienschop|Fraanse Gemienschop van België]] erkent 't Waols as endogene (daor ontstaone) regionaole taal. 't Wördt in België espreuken in 't grootste diel van 't [[Waalnlaand|Waolenlaand]]. D'r bint vier heufdindielings in de Waolse dialecten en een standaard (schrief)vörm. Naor de sprekers van 't Waols kuj verwiezen as [[Waolen]]<ref>« L'acception linguistique […] respectivement belge et dialectologique » Albert Henry, ''Histoire des mots Wallon et Wallonie'', Institut Jules Destrée, Coll. «Notre histoire», Mont-sur-Marchienne, 1990, 3e editie. (1e editie 1965), blz. 59</ref>, mar umdet dizze term in de eerste plaatse slat op alle inwoners van [[Wallonië]], gebruukt ze meer en meer de term ''wallonophone''<ref>[http://www.ucl.ac.be/etudes/cours/fr/rom2471.html Université catholique de Louvain, Faculté de philosophie et lettres]</ref> (''walon-cåzant'' in 't Waols).
 
 == Name ==
-De name ''Waols'' kump van ''Walh'', een slim old [[Oergermaans|Germaons]] woord daoras de [[Germaonen]] mit verwezen naor de [[Keltisch]]taligen. 't Woord wördden in aandere talen oavereneumen en verspreidden hum in verschillende betiekenissen (vergeliekt ''[[Welsh]]''). 't Romaons naamp ''Wallon'' oaver, det al rap vergeliekbere woorden verdrung. De oldst bekende vermelding stamt uut 1465, in de ''Mémoires de Jean, sire de Haynin et de Louvignies'' deur [[Jean de Haynin]], daorin hi'j de Romaonse volken van de [[Bourgondische Nederlaanden]] beschrif. De beduding veraandern nog wieder deur de Fraanse bezetting, 't Nederlaandse bestuur en de Belgische onofhaankelijkheid; toe wördden d'r allennig nog [[Belg]]en mit een Romaonse taalachtergrond mit bedoeld. De dialectologische onderzukings van de [[19e eeuw]] hebt staorigan de verschillen tussen de belgo-romaonse dialecten blootelegd, waordeur linguïsten mit ''Waols'' allennig naor de Waolse taal in strikte zin verwiest; niet naor aandere Romaonse talen in 't Waolenlaand zoas 't [[Picardisch]].
+De name ''Waols'' kump van ''Walh'', een slim old [[Oergermaans|Germaons]] woord daoras de [[Germoanen|Germaonen]] mit verwezen naor de [[Keltisch]]taligen. 't Woord wördden in aandere talen oavereneumen en verspreidden hum in verschillende betiekenissen (vergeliekt ''[[Welsh]]''). 't Romaons naamp ''Wallon'' oaver, det al rap vergeliekbere woorden verdrung. De oldst bekende vermelding stamt uut 1465, in de ''Mémoires de Jean, sire de Haynin et de Louvignies'' deur [[Jean de Haynin]], daorin hi'j de Romaonse volken van de [[Bourgondische Nederlaanden]] beschrif. De beduding veraandern nog wieder deur de Fraanse bezetting, 't Nederlaandse bestuur en de Belgische onofhaankelijkheid; toe wördden d'r allennig nog [[Belg]]en mit een Romaonse taalachtergrond mit bedoeld. De dialectologische onderzukings van de [[19e eeuw]] hebt staorigan de verschillen tussen de belgo-romaonse dialecten blootelegd, waordeur linguïsten mit ''Waols'' allennig naor de Waolse taal in strikte zin verwiest; niet naor aandere Romaonse talen in 't Waolenlaand zoas 't [[Picardisch]].
 
 == Geschiedenis ==
 [[Ofbeelding:Crupet JPGW.jpg|thumb|Waols op een bröd van een winkel in [[Crupet]]]]
