--- a/Westlaauwers_Frais.mw
+++ b/Westlaauwers_Frais.mw
@@ -37,7 +37,7 @@
 |
 *[[Indo Europees]]
 **[[Germaanse sproaken|Germoans]]
-***[[West-Germoans]]
+***[[West-Germoanse toalen|West-Germoans]]
 ****[[Ingvaeoons]]
 ****[[Freesk|Frais]] 
 *****'''Westlaauwers Frais''' 
@@ -62,7 +62,7 @@
 [[Ofbeelding:Grafyk_talen_sprutsen_yn_fryslân.gif|thumb|Weergoave van de toaln dij in provìnzie Fraislaand (as mouertoal) proat worden (in persìnten)]]
 [[Ofbeelding:Grafyk_behearsking_frysk_troch_ynwenners_fryslân.gif|thumb|Beheersen van Frais deur de inwoner van provìnzie Fraislaand (in persìnten).]]
 |} <!-- ende mal:wrapper -->
-'''Westlaauwers Frais''' (of gewoon ''Frais'') is n toal dij heurt bie [[Noordwestgermoanse toaln|Noordwestgermoanse toek]] van [[Westgermoanse toaln]]. Deur toalkundegen wordt  maisttied ''Westerlaauwers Frais'' nuimd. In boetenlaand staait t veuraal bekind as ''Westfrais'', moar in [[Nederlaand]] het [[Westfrais]] andere betaikenis. Op dizze pagina wordt de noam "Frais" aanholden.
+'''Westlaauwers Frais''' (of gewoon ''Frais'') is n toal dij heurt bie [[Noordwestgermoanse toaln|Noordwestgermoanse toek]] van [[West-Germoanse toalen|Westgermoanse toaln]]. Deur toalkundegen wordt  maisttied ''Westerlaauwers Frais'' nuimd. In boetenlaand staait t veuraal bekind as ''Westfrais'', moar in [[Nederlaand]] het [[Westfrais]] andere betaikenis. Op dizze pagina wordt de noam "Frais" aanholden.
 
 == Verbondskop mit aandere toaln ==
 Frais is naauw verbonden aan baaide aandere [[Freesk|Fraise toaln]], t [[Selterfrais]] en t [[Noordfrais]]. Wieder is Frais van oorsprong ook naauw verbonden aan [[Angelsaksisch|Angelsaksische toaln]], [[Engels]] en [[Skots]]. Deur aivenlaange oafzönderlke ontwikkeln - zowel dij van de Angelsaksische toaln op [[Britse Eilanden|Britse Aailanden]], as dij van Frais op kontinìnt - het t tegenswoordege Frais aigelks meer gemain mit [[Nederlaands]] as mit Engels.
@@ -178,7 +178,7 @@ Moar Frais het ook wat lainwoorden oet Fraans opnomen dij in  Nederlaands nait v
 Lèste aiv het Frysk noast dij van Nederlaands veuraal invloud van  Engels had, en den veurnoamelk van [[Amerikoans Engels]]. Dit onderandere deur media: Amerikoanse films, Engelse komputerprogrammeern, enzoveurt.
 
 == Geschiednis ==
-Veur ontstoan van Frais mout der n aandere toal proat wezen, meugelk deur oorspronkelke bewoner van de Fraise gebieden, veur  [[Germaonen|Germoanen]] woar [[Friezen (volk)|Fraizen]] van oafstammen. Dizze toal wordt ook wel aanduud as [[Proto-Frais]], moar toalkundegen binnen der nait over ais of der van dizze [[substraat|substroattoal]] in tegenswoordege Frais nog spoorn weer te vinden binnen.
+Veur ontstoan van Frais mout der n aandere toal proat wezen, meugelk deur oorspronkelke bewoner van de Fraise gebieden, veur  [[Germoanen]] woar [[Friezen (volk)|Fraizen]] van oafstammen. Dizze toal wordt ook wel aanduud as [[Proto-Frais]], moar toalkundegen binnen der nait over ais of der van dizze [[substraat|substroattoal]] in tegenswoordege Frais nog spoorn weer te vinden binnen.
 
 Oldste Frais het in [[runen|rune-inskripsies]] van veur aachtste aiw overleefd. n Betere bron lieken olle [[plaknoam]]en, dij veur eerst sunt [[700]] spesifieke [[klankverschiensel]]s zain luiten. Der wordt doarom wel docht dat ontstoan van Frais as oafzönderlke toal, in dij tied steevonden haar.
 
