--- a/Påske.mw
+++ b/Påske.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Grunewald - christ.jpg|right|thumb|250px|Poaske]]
 [[Ofbeelding:Paasvuur.jpg|right|250px|thumb|Poaskevuur]]
 [[Ofbeelding:Traditional easter eggs in Croatia.JPG|right|250px|thumb|n Poasktoavel ien Krewoatsie]]
-'''Poaske''' (ook: ''Poask''; [[Oostfreisk Nederduutsk|Oostfrais]] en [[Westerwôlds]]: ''Oostern'' of ''Paasch''/''Paosk'' <small>(zulfde oetsproak)</small>) is aswel n [[christendom|kristelk]] as n [[Germaonen|old-Germoans]], as n [[Jodendom|Joods]] (zai [[Pesach]]) feest. 
+'''Poaske''' (ook: ''Poask''; [[Oostfreisk Nederduutsk|Oostfrais]] en [[Westerwôlds]]: ''Oostern'' of ''Paasch''/''Paosk'' <small>(zulfde oetsproak)</small>) is aswel n [[christendom|kristelk]] as n [[Germoanen|old-Germoans]], as n [[Jodendom|Joods]] (zai [[Pesach]]) feest. 
 
 == Kristelk feest ==
 In de [[christendom|kristelke]] traditsie is '''Poaske''' of t '''Poaskefeest''' t belaangriekste biebelse feest. Op [[Goede Vrijdag|Goie Vraaidag]], de vraaidag veur Poaske, heerdenken Kristenen t laaiden en de [[kruis (christendom)|kruzegen]] van [[Jezus Christus|Jezus Kristus]] en mit Poaske vaaiern zai zien [[opstanding|opstanden]], ook wel 'verraaizen' nuimd, oet de dood.
